# elyria_engine

./: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  message.rs  player.rs
crates/engine/: Cargo.toml
crates/engine/src/: camera.rs  lib.rs
crates/engine/src/core/: application.rs  (+3 more)
crates/game/: Cargo.toml  build.rs
crates/game/src/: gamestate.rs  main.rs  player.rs  tick.rs
crates/game/src/network/: client.rs  event.rs  mod.rs  system.rs
crates/game/src/network/handlers/: connected_handler.rs  distant_player_disconnected.rs  distant_player_moved.rs  handler.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  main.rs  player.rs
crates/server/src/admin/: pages.rs
crates/server/src/core/: server.rs
crates/server/templates/: players.html
resources/data/animation/: player_base_idle_down.json
resources/data/animations/: player_base_idle_down.json  player_base_idle_left.json  player_base_idle_right.json  player_base_idle_up.json  player_base_walk_down.json  player_base_walk_left.json  player_base_walk_right.json  player_base_walk_up.json
resources/data/spritesheets/: player_base.json
shaders/: shader.fs  shader.vs
src/: buffer.rs  camera.rs  macro.rs  main.rs  shader.rs  texture.rs
src/core/: application.rs  frame_context.rs  input.rs  macro.rs  mod.rs
src/glutils/: buffer.rs  texture.rs
src/graphics/: animation.rs  cuboid_renderer.rs  managers.rs  mesh.rs  mod.rs  model.rs  sprite.rs  spritesheet.rs
src/math/: transform.rs
src/world/: component.rs  entity.rs  mod.rs  scene.rs  system.rs  world.rs
(+12 files in other folders)
