[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
cgmath = "0.16.1"
glfw = "0.23.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"