[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
engine = { path = "../engine" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
cgmath = "0.16.1"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"